examples/misc/error/manual/many-cells.bfr
// セルが極端に多い場合
// layout出力でセグフォを出さないように注意

let fix f =
  let g x = f (fun y -> x x y) in
  g g

let main = $

*fix
  (fun f n ->
    if n <= 0 then []
    else
      [ $alloc { x }
        *f (n - 1)
        *f (n - 1)
        *f (n - 1)
        *f (n - 1)
        *f (n - 1)
        *f (n - 1)
        *f (n - 1)
        *f (n - 1)
        *f (n - 1)
        *f (n - 1)
      ]
  ) 7